--- a/start/index.html
+++ b/start/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <title>Art Sales</title>
+        <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="./bootstrap-4.4.1-dist/css/bootstrap.min.css">
     </head>
-    
     <body>
-        <button class="btn btn-primary">Testing</button>
+        <div id="home-container">
+            <div class="r1">
+                <div class="r1-inner">
+                    <nav class="home-main-nav">
+                        <ul>
+                            <li>
+                                <a href="#">Assn2</a>
+                            </li>
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Work</a>
+                            </li>
+                            <li>
+                                <a href="#">Artist</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="r2">r2</div>
+        </div>
 
 
 
