--- a/start/index.html
+++ b/start/index.html
@@ -39,7 +39,7 @@
         <div class="r2">
             <div>
                 <img class="circle" src="img/thumbs/120010.jpg" alt="lady">
-                <h2>Portrait of Eleanor of Toledo</h2>
+                <h2 class="picture-heading">Portrait of Eleanor of Toledo</h2>
                 <p class="left-align">The Protrait of Eleanor of Toldeo and Her Son is a painting by the Italisn artists
                     Agnolo di Cosino, known as Bromzino, finshed ca. 1545. One of his most famous works, it is housed in
                     the Uffizi Gallery of Florance, Italy and is considered one of the preeminent examples of Mannerist
@@ -48,7 +48,7 @@
             </div>
             <div>
                 <img class="circle" src="img/thumbs/116010.jpg" alt="lady1">
-                <h2>Portrait of the Artist</h2>
+                <h2 class="picture-heading">Portrait of the Artist</h2>
                 <p class="left-align">The Protrait of Eleanor of Toldeo and Her Son is a painting by the Italisn artists
                     Agnolo di Cosino, known as Bromzino, finshed ca. 1545. One of his most famous works, it is housed in
                     the Uffizi Gallery of Florance, Italy and is considered one of the preeminent examples of Mannerist
@@ -57,7 +57,7 @@
             </div>
             <div>
                 <img class="circle" src="img/thumbs/106020.jpg" alt="lady2">
-                <h2>Girl with the Pearl Earring</h2>
+                <h2 class="picture-heading">Girl with the Pearl Earring</h2>
                 <p class="left-align">The Protrait of Eleanor of Toldeo and Her Son is a painting by the Italisn artists
                     Agnolo di Cosino, known as Bromzino, finshed ca. 1545. One of his most famous works, it is housed in
                     the Uffizi Gallery of Florance, Italy and is considered one of the preeminent examples of Mannerist
