--- a/start/index.html
+++ b/start/index.html
@@ -49,19 +49,19 @@
             <div>
                 <img class="circle" src="img/thumbs/116010.jpg" alt="lady1">
                 <h2 class="picture-heading">Portrait of the Artist</h2>
-                <p class="left-align">The Protrait of Eleanor of Toldeo and Her Son is a painting by the Italisn artists
-                    Agnolo di Cosino, known as Bromzino, finshed ca. 1545. One of his most famous works, it is housed in
-                    the Uffizi Gallery of Florance, Italy and is considered one of the preeminent examples of Mannerist
-                    Portraiture.</p>
+                <p class="left-align">The Protrait of the Artist Holding a Thistile is an oil painting on parchment
+                    pasted on canvas by German artist Albrecht Dürer, painted in 1493. It is the earliest of Dürer's
+                    painted self-protraits and has been idetnifed as one of the first self-portraits painted by a
+                    Northern artist. </p>
                 <button class="btn btn-light">View Details</button>
             </div>
             <div>
                 <img class="circle" src="img/thumbs/106020.jpg" alt="lady2">
                 <h2 class="picture-heading">Girl with the Pearl Earring</h2>
-                <p class="left-align">The Protrait of Eleanor of Toldeo and Her Son is a painting by the Italisn artists
-                    Agnolo di Cosino, known as Bromzino, finshed ca. 1545. One of his most famous works, it is housed in
-                    the Uffizi Gallery of Florance, Italy and is considered one of the preeminent examples of Mannerist
-                    Portraiture.</p>
+                <p class="left-align">Girl with a Pearl Earring is one of Johannes Vermeer's masterworks and, as the
+                    name implies, uses a pearl earring for a focal point. Today the painting is kept in the Mauritshuis
+                    gallery in The Hague. It is sometimes referred to as "the Mona Lisa of the North" or "the Dutch Mona
+                    Lisa".</p>
                 <button class="btn btn-light">View Details</button>
             </div>
         </div>
