--- a/start/about/about.html
+++ b/start/about/about.html
@@ -19,16 +19,16 @@
                     <span class="welcome-text">Welcome to Art Store, Login or Create new account</span>
                     <ul class="top-nav-items">
                         <li>
-                            <a href="#"> <i class="fas fa-camera"></i> My Account</a>
+                            <a href="#"> <i class="fas fa-user"></i> My Account</a>
                         </li>
                         <li>
-                            <a href="#"> <i class="fas fa-camera"></i> Wish List</a>
+                            <a href="#"> <i class="fas fa-gift"></i> Wish List</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fas fa-camera"></i> Shopping Cart</a>
+                            <a href="#"><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fas fa-camera"></i> Checkout</a>
+                            <a href="#"><i class="fas fa-long-arrow-alt-right"></i> Checkout</a>
                         </li>
                     </ul>
                 </nav>
